--- a/fuentes/app/src/main/res/layout/personajes_list.xml
+++ b/fuentes/app/src/main/res/layout/personajes_list.xml
@@ -5,72 +5,32 @@
     android:layout_height="match_parent">
 
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/personaje_pj"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:orientation="horizontal">
+        android:layout_weight="1"
+        android:textSize="25sp">
 
-        <TextView
-            android:layout_marginStart="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Nombre:"
-            android:textColor="@color/"
-            android:textSize="20dp"></TextView>
+    </TextView>
 
-        <TextView
-            android:id="@+id/cita_pj"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:textColor="@color/"
-            android:textSize="20dp"></TextView>
-
-    </LinearLayout>
-    <LinearLayout
+    <ImageView
+        android:layout_marginTop="20dp"
+        android:id="@+id/image_pj"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:orientation="horizontal">
+        android:layout_weight="7">
 
-        <TextView
-            android:layout_marginStart="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Nombre:"
-            android:textColor="@color/"
-            android:textSize="20dp"></TextView>
+    </ImageView>
 
-        <TextView
-            android:id="@+id/personaje_pj"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:textColor="@color/"
-            android:textSize="20dp"></TextView>
-
-    </LinearLayout>
-    <LinearLayout
+    <TextView
+        android:layout_marginTop="10dp"
+        android:id="@+id/cita_pj"
+        android:textSize="25sp"
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-
-        <ImageView
-            android:id="@+id/image_pj"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            ></ImageView>
-
-
+    </TextView>
     </LinearLayout>
 
-</LinearLayout>
