--- a/fuentes/app/src/main/res/layout/toolbar.xml
+++ b/fuentes/app/src/main/res/layout/toolbar.xml
@@ -21,9 +21,10 @@
             android:layout_marginHorizontal="120dp"
             android:layout_width="150sp"
             android:layout_height="90sp"
-            >
+            ></ImageView>
 
-        </ImageView>
+
+
     </LinearLayout>
 
 
