--- a/fuentes/app/src/main/res/values/colors.xml
+++ b/fuentes/app/src/main/res/values/colors.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFC107</color>
-    <color name="purple_500">#03A9F4</color>
     <color name="purple_700">#FFA000</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple">#FFEB3B</color>
+    <color name="purple2">#FBC02D</color>
 </resources>
